# fin-public

./: '  .gitignore  LICENSE  README.md
fin/: Cargo.toml  rustfmt.toml
fin/migrations/2018-10-07-022941_init/: down.sql  up.sql
fin/migrations/2018-10-07-232226_fake_data/: down.sql  up.sql
fin/src/: api.rs  data.rs  errors.rs  macros.rs  main.rs  models.rs  portfolio.rs  portfolio1.rs  portfolio2.rs  std_ext.rs  ticker.rs
fin/src/data/: mod.rs  pg_data.rs  static_data.rs
fin/src/portfolio/: action.rs  actual.rs  goal.rs  meta.rs  mod.rs  state.rs
fin/src/portfolio_state/: mod.rs
infra/: Makefile  README.md  example.cf_secret  hosts  nginx.cfg  nginx_website.cfg  playbook.yml  requirements.yml
infra/tasks/: acme.yml  app.yml  apt.yml  init_acme.yml  nginx.yml  rust.yml  website.yml
infra/vars/: main.yml
preston/: 01-value-investing.md  02-income-statement.md  03-balance-sheet.md  04-what-is-a-share.md  05-warren-buffet-basics.md  06-what-is-a-bond.md  07-components-of-a-bond.md  08-how-to-value-bond-and-yeild-to-maturity.md  26-cashflow-statement.md
service/: Cargo.toml  Dockerfile  Makefile  rust-toolchain  teardown.sql
service/fin/: Cargo.toml
service/fin/src/: api.rs  buy_next.rs  errors.rs  global.rs  lib.rs  main.rs  models.rs  server.rs  server2.rs  settings.rs  std_ext.rs  ticker.rs
service/fin/src/algo/: buy_next.rs
service/fin/src/backend/: mod.rs  portfolio_backend.rs  user_backend.rs
service/fin/src/data/: db_types.rs  mod.rs  pg_data.rs  test_helper.rs
service/fin/src/portfolio/: action.rs  actual.rs  buy_next.rs  goal.rs  meta.rs  mod.rs  portfolio.rs  state.rs  test_helper.rs  ticker.rs
service/fin/src/server/: api.rs  auth.rs  mod.rs  portfolio_server.rs  user_server.rs
service/fin_config/: Cargo.toml  default.toml  development.toml  production.toml
service/fin_config/src/: lib.rs
service/fin_core/: Cargo.toml
service/fin_core/benches/: my_bench.rs
service/fin_core/src/: lib.rs  std_ext.rs
service/fin_core/src/algo/: action.rs  buy_next.rs  mod.rs  test_helper_buy_next.rs
service/fin_core/src/portfolio/: actual.rs  goal.rs  meta.rs  mod.rs  state.rs  test_helper_meta.rs  ticker.rs
service/fin_error/: Cargo.toml
service/fin_error/src/: errors.rs  lib.rs
service/iex-rs/: Cargo.toml
service/iex-rs/src/: lib.rs
service/iex-rust/: Cargo.toml
service/iex_rs/: Cargo.toml
service/iex_rs/src/: errors.rs  lib.rs  std_ext.rs
service/migrations/2018-10-07-022941_init/: down.sql  up.sql
service/migrations/2018-10-07-232226_fake_data/: down.sql  up.sql
service/migrations/2018-10-07-232226_initial_data/: up.sql
service/migrations/2020-11-29-201034_add_growth_goal_portfolio/: down.sql  up.sql
service/src/: drop.rs  errors.rs  global.rs  lib.rs  main.rs  std_ext.rs  ticker.rs
service/src/algo/: action.rs  buy_next.rs  mod.rs
service/src/backend/: portfolio_backend.rs  user_backend.rs
service/src/data/: db_types.rs  mod.rs  test_data.sql  test_helper.rs  test_helper_db.rs
service/src/portfolio/: actual.rs  goal.rs  meta.rs  mod.rs  state.rs  test_helper.rs
service/src/server/: api.rs  auth.rs  mod.rs  portfolio_server.rs  user_server.rs
talk/: README.md
website/: Makefile  config.js  package-lock.json  package.json  tsconfig.json
website/src/: App.vue  index.html  index.js  models.ts
website/src/components/: BuyNextView.vue  CenterView.vue  ErrorsView.vue  FinTable.vue  FinView.vue  Hello.vue  Loader.vue  LoaderView.vue  NavComplexView.vue  NavView.vue  OldFinView.vue  Portfolio.vue  PortfolioView.vue  TableListView.vue
website/src/components/add-portfolio-view/: AddPortfolioView.vue  index.vue  models.ts
website/src/components/dash-view/: DashView.vue  index.vue
website/src/components/login-view/: index.vue
website/src/components/page-not-found/: index.vue
website/src/components/portfolio-add-view/: AddPortfolioView.vue  index.vue
website/src/components/portfolio-edit-view/: EditPortfolioView.vue  index.vue  models.ts
website/src/components/portfolio-list-view/: PortfolioListView.vue  index.vue
website/src/components/portfolio-view/: BuyNextView.vue  CalcInvestmentView.vue  PortfolioHeaderView.vue  PortfolioTableView.vue  PortfolioView.vue  ScrollView.vue  index.vue  models.ts
website/src/components/signup-view/: index.vue
website/src/data/: models.ts
website/static/: global.scss  test.scss
