cargo-features = ["edition"]

[package]
name = "fin"
version = "0.1.0"
authors = ["toidiu <apoorv@toidiu.com>"]
edition = '2018'


[dependencies]
rocket = "0.3.17"
rocket_codegen = "0.3.17"
rocket_cors = "0.3.0"
serde = "1.0.76"
serde_derive = "1.0.76"
serde_json = "1.0.26"
derivative = "1.0.0"
lazy_static = "1.1.0"

# testing
mock_derive = "0.7.0"


