cargo-features = ["edition"]

[package]
name = "fin"
version = "0.1.0"
authors = ["toidiu <apoorv@toidiu.com>"]
edition = '2018'


[dependencies]
rocket = "0.3.17"
rocket_codegen = "0.3.17"
rocket_cors = "0.3.0"
serde = "~1.0"
serde_derive = "~1.0"
serde_json = "~1.0"
derivative = "~1.0"
lazy_static = "~1.1"
# diesel = { version = "~1.3", features = ["postgres"] }
postgres = "~0.15"
log = "~0.4"
env_logger = "~0.5"


