[package]
name = "fin"
version = "0.1.0"
authors = ["toidiu <apoorv@toidiu.com>"]
description = "Server for fin, a financial calculator."
edition = '2018'
publish = false

[workspace]
members = [
  "fin_config"
]

[dependencies]
fin_config = { path = "fin_config" }

slog = "~2.4"
slog-term = "~2.4"
slog-async = "~2.3"
lazy_static = "~1.3"

postgres = { version = "~0.15", features = ["with-serde_json", "with-chrono"] }
postgres-derive = "~0.3"
r2d2 = "~0.8"
r2d2_postgres = "~0.14"

http = "~0.1"

serde = "~1.0"
serde_derive = "~1.0"
serde_json = "~1.0"


[dependencies.postgres-mapper]
features = ["postgres-support"]
git = "https://github.com/toidiu/postgres-mapper"

[dependencies.postgres-mapper-derive]
features = ["postgres-mapper", "postgres-support"]
git = "https://github.com/toidiu/postgres-mapper"


