cargo-features = ["edition"]

[package]
name = "fin"
version = "0.1.0"
authors = ["toidiu <apoorv@toidiu.com>"]
edition = '2018'


[dependencies]
chrono = { version = "~0.4", features = ["serde"] }
env_logger = "~0.5"
iex-rust = { path = "../iex-rust" }
log = "~0.4"
lru_time_cache = "~0.8"
lazy_static = "~1.1"

postgres = { version = "~0.15", features = ["with-serde_json", "with-chrono"] }

rocket = "0.3.17"
rocket_codegen = "0.3.17"
rocket_contrib = { version = "0.3.17", default-features = false, features = ["json"] }
rocket_cors = "0.3.0"

serde = "~1.0"
serde_derive = "~1.0"
serde_json = "~1.0"


[dependencies.postgres-mapper]
features = ["postgres-support"]
git = "https://github.com/toidiu/postgres-mapper"

[dependencies.postgres-mapper-derive]
features = ["postgres-mapper", "postgres-support"]
git = "https://github.com/toidiu/postgres-mapper"

