[package]
name = "fin"
version = "0.1.0"
authors = ["toidiu <apoorv@toidiu.com>"]
edition = '2018'
publish = false

[dependencies]
iex_rs = { path = "../iex_rs", features = ["source_debug"] }
# iex_rs = { path = "../iex_rs" }
fin_config = { path = "../fin_config" }

chrono = { version = "~0.4", features = ["serde"] }
slog = "~2.4"
slog-term = "~2.4"
slog-async = "~2.3"
lru_time_cache = "~0.9"
lazy_static = "~1.3"
time = "~0.1"

libpasta = "0.1"
paseto = "~1.0"

postgres = { version = "~0.15", features = ["with-serde_json", "with-chrono"] }
postgres-derive = "~0.3"
r2d2 = "~0.8"
r2d2_postgres = "~0.14"

warp = "0.1.11"
http = "~0.1"

serde = "~1.0"
serde_derive = "~1.0"
serde_json = "~1.0"


[dependencies.postgres-mapper]
features = ["postgres-support"]
git = "https://github.com/toidiu/postgres-mapper"

[dependencies.postgres-mapper-derive]
features = ["postgres-mapper", "postgres-support"]
git = "https://github.com/toidiu/postgres-mapper"

