cargo-features = ["edition"]

[package]
name = "iex-rs"
version = "0.1.0"
authors = ["toidiu <apoorv@toidiu.com>"]
description = "A rather simple wapper at the moment for the iex api."
keyworks = ["iex", "api", "finance"]
categories = ["api-bindings"]
license = "MIT"
edition = '2018'
maintenance = { status = "passively-maintained" }

[dependencies]
serde = "~1.0"
serde_derive = "~1.0"
serde_json = "~1.0"
reqwest = "0.9.2"
log = "~0.4"

